--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Joao-Darwin/n-report-api.git"
+    "url": "git+https://github.com/leandrosuy2/n-report-api.git"
   },
   "keywords": [
     "crime",
@@ -18,12 +18,12 @@
     "typescript",
     "postgresql"
   ],
-  "author": "João Darwin, Antônio Lacerda, Eduardo Denis",
+  "author": "Leandro Dantas",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Joao-Darwin/n-report-api/issues"
+    "url": "https://github.com/leandrosuy2/n-report-api/issues"
   },
-  "homepage": "https://github.com/Joao-Darwin/n-report-api#readme",
+  "homepage": "https://github.com/leandrosuy2/n-report-api#readme",
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
