--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/leandrosuy2/n-report-api#readme",
   "dependencies": {
     "@prisma/client": "^5.6.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.21.0",
@@ -46,5 +46,8 @@
     "prisma": "^5.6.0",
     "tsx": "^4.1.1",
     "typescript": "^5.2.2"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
