--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "ts-node": "^10.9.1"
+    "socket.io": "^4.8.1",
+    "ts-node": "^10.9.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -42,6 +44,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.9.0",
+    "@types/socket.io": "^3.0.1",
+    "@types/ws": "^8.18.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
     "tsx": "^4.1.1",
