--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "aplicação onde você pode alertar crimes em uma determinado localização.",
   "main": "index.ts",
   "scripts": {
-    "start": "tsx ./src/index.ts",
+    "start": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed && tsx ./src/index.ts",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -48,8 +48,7 @@
     "@types/ws": "^8.18.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
-    "tsx": "^4.1.1",
-    "typescript": "^5.2.2"
+    "tsx": "^4.7.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
