--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - .:/nreportapi
       - /nreportapi/node_modules
-      - uploads_data:/nreportapi/uploads
+      - ./uploads:/nreportapi/uploads
 
   db-postgres:
     image: postgres:15
@@ -27,4 +27,3 @@ services:
 
 volumes:
   postgres_data:
-  uploads_data:
